[package]
name = "rusty_rogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { version = "0.8.7", features = ["serde"] }
enum_derive = "0.1.7"
frunk = "0.4.1" # Note, currently not using this - but worth a look
itertools = "0.10.5"
macro-attr = "0.2.0"
serde = { version = "1.0.148", features = ["derive"]}
serde_json = "1.0.91"
specs = { version = "0.18.0", features = ["serde"]}
specs-derive = "0.4.1"
