[package]
name = "rusty_rogue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bracket-lib = { path = "../bracket-lib/",  default-features = false, features = [
bracket-lib = { git = "https://github.com/bbarker/bracket-lib.git", rev = "d85c17ac21ab1dc6f10e01cc4a7fd711e16fe7be", features = [
  "serde",
] }

#have to use git rev to support wasm; see https://github.com/amethyst/bracket-lib/issues/301
enum_derive = "0.1.7"
frunk = "0.4.1"                                        # Note, currently not using this - but worth a look
itertools = "0.10.5"
macro-attr = "0.2.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.91"
specs = { version = "0.18.0", features = ["serde"] }
specs-derive = "0.4.1"
once_cell = "1.5.2"
indexmap = "1.9.3"
# FunctionalRust = { git = "https://github.com/politrons/FunctionalRust.git", rev = "1f34793" }
paste = "1.0.14"
# lens-rs = "0.3.2"
